# jupyter-superslim

./: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  jupytersuperslim.yaml  requirements.txt
.github/workflows/: build_and_push_jupyter_superslim.yaml  build_and_push_jupyter_superslim_heal.yaml  build_and_push_jupyter_superslim_rkernel.yaml  ci.yaml
jupyter-poetically-slim/: Dockerfile  pyproject.toml
jupyter-poetically-slim/resources/scripts/jupyter/: start.sh
jupyter-superslim/: Dockerfile  docker-compose.yaml  jupytersuperslim.yaml  pyproject.toml  requirements.txt
jupyter-superslim-extension/: Dockerfile  jupytersuperslimextension.yaml  requirements.txt
jupyter-superslim-heal/: Dockerfile  jupytersuperslimheal.yaml  pyproject.toml
jupyter-superslim-heal/resources/scripts/jupyter/: start.sh
jupyter-superslim-rkernel/: Dockerfile  jupytersuperslimrkernel.yaml  pyproject.toml  requirements.txt
jupyter-superslim-rkernel/resources/scripts/jupyter/: start-notebook.sh
jupyter-superslim/resources/scripts/jupyter/: start-notebook.sh  start.sh
resources/: jupyter_notebook_config.py
