[tool.poetry]
name = "jupyter-poetically-slim"
version = "0.1.0"
description = "superslim workspace env"
authors = ["CTDS"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
