[tool.poetry]
name = "jupyter-poetically-slim"
version = "0.1.0"
description = "superslim workspace env"
authors = ["CTDS"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
requests = "^2.27.1"
jupyterlab = "3.6.6" # 4.0.0+ not stable enough yet
jupyter_server = "^2.7.3"
# may need more jupyter tools like jupyterhub

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
