[tool.poetry]
name = "jupyter-superslim-rkernel"
version = "3.0.0"
description = "Jupyter Superslim"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
repository = "https://github.com/uc-cdis/jupyter-superslim"
include = [
  "NOTICE",
]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9.2, <3.10"
gen3 = "*"
cdiserrors = "*"
pandas = "*"
numpy = "*"

# not a direct dependency, pinned by Snyk to avoid a vulnerability
tornado = ">=6.5"
zipp = ">=3.19.1"

# Jupyter plugins and utilities section
jupyter-lsp = "*"
jupyterlab-lsp = "*"
jupyterlab-search-replace = "*"
jupyterlab-git = "*"
jupyter_server_ydoc = "*"
altair = {extras = ["all"], version = "*"}
lckr_jupyterlab_variableinspector = "*"
frictionless = "*"


[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.masonry.api"

[tool.setuptools_scm]
