[tool.poetry]
name = "jupyter-superslim-rkernel"
version = "3.0.0"
description = "Jupyter Superslim"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
repository = "https://github.com/uc-cdis/jupyter-superslim"
include = [
  "NOTICE",
]
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
gen3 = "*"
cdiserrors = "*"


# Jupyter plugins and utilities section
jupyter-lsp = "*"
jupyterlab-lsp = "*"
jupyterlab-search-replace = "*"
jupyterlab-git = "*"
jupyter_server_ydoc = "*"
altair = {extras = ["all"], version = "*"}
lckr_jupyterlab_variableinspector = "*"
frictionless = "*"


[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.masonry.api"
